[package]
name = "rope_rd"
version = "0.4.0"
authors = ["Chris L. Barnes <chrislloydbarnes@gmail.com>"]
description = "A Read/Seek rope implementation"
repository = "https://github.com/clbarnes/rope_rd"
license = "MIT"
keywords = ["rope", "sparse", "read", "seek", "io"]
categories = ["algorithms", "data-structures", "compression"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
cargo-release = "0.24.11"

[package.metadata.release]
publish = false
